@@ -1,5 +1,6 @@
 0.7.0.11
 Issue #1068 New-BcImage doesn't run on Windows Server 2016
+Write Warning when creating new container based on imagename without artifacts
 
 0.7.0.10
 Issue #1043 Removal of AAD application needs to use case insensitive search
